# stylus-zkvm-verifiers

./: .gitignore  Cargo.toml  README.md
contracts/: Cargo.toml
contracts/src/: lib.rs
contracts/src/common/: errors.rs  groth16.rs  mod.rs  plonk.rs  types.rs
contracts/src/risc0/: config.rs  crypto.rs  errors.rs  mod.rs  types.rs  verifier.rs
contracts/src/sp1/: config.rs  crypto.rs  errors.rs  mod.rs  plonk.rs  types.rs  verifier.rs
contracts/src/sp1/groth16/: config.rs  crypto.rs  errors.rs  types.rs  verifier.rs
contracts/src/sp1/plonk/: config.rs  crypto.rs  errors.rs  mod.rs  types.rs  verifier.rs
examples/risc0-verifier/: .env.example  Cargo.toml
examples/risc0-verifier/examples/: interact.rs
examples/risc0-verifier/src/: lib.rs  main.rs
examples/sp1-plonk-verifier/: Cargo.toml
examples/sp1-plonk-verifier/src/: lib.rs  main.rs
examples/sp1-verifier/: Cargo.toml
examples/sp1-verifier/examples/: interact.rs
examples/sp1-verifier/src/: lib.rs  main.rs
