[workspace]
members = [
    "contracts",
]
exclude = [
    "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnosisguild/stylus-zkvm-verifiers"
authors = ["Gnosis Contributors"]

[workspace.dependencies]
# Stylus SDK and related
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
stylus-sdk = "0.9.0"
mini-alloc = { version = "0.4.2", default-features = false }

# Crypto and utilities
hex = { version = "0.4", default-features = false }
sha2 = { version = "0.10", default-features = false }

# Dev dependencies
tokio = { version = "1.12.0", features = ["full"] }
alloy = { version = "0.8.2", features = ["full"]}
eyre = "0.6.8"
dotenv = "0.15.0"

# Internal workspace dependencies
stylus-zkp-verifiers = { path = "contracts" }

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = 3 