[package]
name = "stylus-zkvm-verifiers"
description = "zkVM proof verifiers for Arbitrum Stylus"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
stylus-sdk.workspace = true
mini-alloc.workspace = true
hex.workspace = true
sha2.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
tokio.workspace = true
alloy.workspace = true
eyre.workspace = true
stylus-sdk = { workspace = true, features = ["stylus-test"] }

[features]
default = ["mini-alloc", "risc0", "sp1", "sp1-plonk"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]
# Individual verifier features
risc0 = []
sp1 = []
sp1-plonk = []

[lib]
crate-type = ["lib"] 