[workspace]

[package]
name = "risc0-verifier-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Example RISC Zero verifier contract using stylus-zkp-verifiers"

[dependencies]
stylus-zkvm-verifiers = { path = "../../contracts", features = ["risc0"] }
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
stylus-sdk = "0.9.0"
hex = { version = "0.4", default-features = false }

[dev-dependencies]
alloy-primitives = { version = "=0.8.20", features = ["sha3-keccak"] }
tokio = { version = "1.12.0", features = ["full"] }
alloy = { version = "0.8.2", features = ["full"]}
eyre = "0.6.8"
stylus-sdk = { version = "0.9.0", features = ["stylus-test"] }
dotenv = "0.15.0"

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "risc0-verifier-example"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = 3 